feat: setup webpack bootstrap 4

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,3 +1,7 @@
+@import "custom";
+@import "~bootstrap/scss/bootstrap";
+//@import "../../node_modules/bootstrap/scss/bootstrap";
+
 body {
   text-align: center;
 }
