--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,6 +1,6 @@
 @import "custom";
 @import "~bootstrap/scss/bootstrap";
-//@import "../../node_modules/bootstrap/scss/bootstrap";
+@import "../../node_modules/bootstrap/scss/bootstrap";
 
 body {
   text-align: center;
