--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,11 +1,87 @@
 @import "custom";
+@import "toggle";
 @import "~bootstrap/scss/bootstrap";
 @import "../../node_modules/bootstrap/scss/bootstrap";
 
-body {
-  text-align: center;
+
+
+html {
+  font-size: 10px;
+  background-color: #ffffff;
 }
 
-.hello {
-  font-size: 2rem;
+body {
+  max-width: 1000px;
+  margin: auto;
+  text-align: center;
+  background-color:  #ffffff;
+  overflow-x: hidden;
 }
+
+header {
+  height: 100px;
+  padding-top: 30px;
+}
+
+.card {
+  width: 300px;
+  height: 280px;
+  cursor: pointer;
+  /* margin: 20px 25px 20px 25px; */
+  border-radius: 5px !important;
+  overflow: hidden;
+  background: linear-gradient(180deg,#0099ae,#00bf82 40%,#fff 0,#fff);
+  box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
+  color: #212529;
+    img {
+      border-radius: 50%;
+      width: 140px;
+      height: 140px;
+      border: 10px solid #fff;
+      object-fit: cover;
+      margin: 30px auto;
+    }
+}
+
+
+
+
+.menuToggle {
+  display: block;
+  position: relative;
+  height: 22px;
+  width: fit-content;
+
+  input {
+    position: absolute;
+    width: 40px;
+    height: 32px;
+    top: -4px;
+    left: -5px;
+    cursor: pointer;
+    opacity: 0;
+    z-index: 2;
+  }
+
+  span {
+    display: block;
+    width: 33px;
+    height: 4px;
+    margin-bottom: 5px;
+    position: relative;
+    background: #cdcdcd;
+    border-radius: 3px;
+    z-index: 1;
+  }
+}
+
+.navbar {
+  max-width: 1000px;
+}
+
+
+
+
+
+
+
