--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -6,7 +6,7 @@
 
 
 html {
-  font-size: 10px;
+  font-size: 10px;  
   background-color: #ffffff;
 }
 
@@ -23,16 +23,18 @@ header {
   padding-top: 30px;
 }
 
-.card {
+.card {  
   width: 300px;
   height: 280px;
   cursor: pointer;
-  /* margin: 20px 25px 20px 25px; */
   border-radius: 5px !important;
-  overflow: hidden;
+  /* overflow: hidden; */
   background: linear-gradient(180deg,#0099ae,#00bf82 40%,#fff 0,#fff);
   box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
   color: #212529;
+  text-decoration: none;
+  transition: .3s; 
+
     img {
       border-radius: 50%;
       width: 140px;
@@ -41,10 +43,94 @@ header {
       object-fit: cover;
       margin: 30px auto;
     }
+    
+    &:hover {
+      /* box-shadow: 0px 10px 17px 0px rgba(50, 50, 50, 0.5); */
+      text-decoration: none;
+      color: #000000;
+    }
+    
+    & .card-text {
+      color: #000000;
+      text-decoration: none;
+    }
+
+    .h1 {
+      font-weight: 400;
+    }
+
+    .rotate {
+      display: none;
+      background-image: url("../img/rotate_icon.jpg");
+      background-size: 35px;
+      background-repeat: no-repeat;
+      background-position-x: 4px;
+      background-position-y: 7px;
+      top: 235px;
+      height: 40px;
+      width: 45px;
+      position: absolute;
+      left: 255px;
+    }
+
+    
+    
 }
 
+.card_set {  
+  background: none;
+  box-shadow: none;
 
+    img {
+      width: 100%;
+      border-radius: 0;
+      height: 235px;
+      border: 0;
+      object-fit: cover;
+      margin: 0;
+    }
 
+    .card-body {
+      padding: 8px;
+    }
+
+    .rotate {
+      display: block;    
+    }
+
+    .front {
+      width: 100%;
+      height: 100%;
+      box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
+      position: absolute;
+      backface-visibility: hidden;
+      transition: 0.5s;
+      display: block;
+      /* transform: rotateY(180deg); */
+    }
+
+    .back {
+      width: 100%;
+      height: 100%;
+      box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
+      position: absolute;
+      backface-visibility: hidden;
+      transform: rotateY(180deg);
+      transition: 0.5s;
+      display: block;
+    }
+
+    &:hover .front {
+      transform: rotateY(180deg);
+      box-shadow: 0px 10px 17px 0px rgba(50, 50, 50, 0.5);
+    }
+
+    &:hover .back  {
+      transform: rotateY(360deg);
+      box-shadow: 0px 10px 17px 0px rgba(50, 50, 50, 0.5);
+    }
+
+}
 
 .menuToggle {
   display: block;
@@ -74,13 +160,6 @@ header {
     z-index: 1;
   }
 }
-
-.navbar {
-  max-width: 1000px;
-}
-
-
-
 
 
 
