--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -30,7 +30,7 @@ header {
   border-radius: 5px !important;
   /* overflow: hidden; */
   background: linear-gradient(180deg,#0099ae,#00bf82 40%,#fff 0,#fff);
-  box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
+  /* box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12); */
   color: #212529;
   text-decoration: none;
   transition: .3s; 
@@ -45,7 +45,7 @@ header {
     }
     
     &:hover {
-      box-shadow: 0px 10px 17px 0px rgba(50, 50, 50, 0.5);
+      /* box-shadow: 0px 10px 17px 0px rgba(50, 50, 50, 0.5); */
       text-decoration: none;
       color: #000000;
     }
@@ -104,17 +104,27 @@ header {
       backface-visibility: hidden;
       transition: 0.5s;
       display: block;
+
+      &:hover {
+        box-shadow: 0px 10px 17px 0px rgba(50, 50, 50, 0.5);
+      }
     }
 
     .back {
       width: 100%;
       height: 100%;
       box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
+      /* box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12); */
+      box-shadow: 0px 10px 17px 0px rgba(50, 50, 50, 0.5);
       position: absolute;
       backface-visibility: hidden;
       transform: rotateY(180deg);
       transition: 0.5s;
       display: block;
+
+      &:hover {
+        box-shadow: 0px 10px 17px 0px rgba(50, 50, 50, 0.5);
+      }
     }
 
 /*     &:hover .front {
