--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -176,7 +176,16 @@ header {
 .btn-lg {
   height: 6rem;
   font-size: 2.4rem;
-  margin-bottom: 50px;
+  margin: auto;
+  margin-bottom: 50px; 
+  transition: 0.5s;
+}
+
+.btn-repeat {
+  width: 100px;  
+  background-image: url("/img/repeat.svg");
+  background-repeat: no-repeat;
+  background-position: center; 
 }
 
 
@@ -225,5 +234,35 @@ header {
   background-image: url("/img/success.jpg");
   background-repeat: no-repeat;
   background-position: center;
+}
+
+.star-container {
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+  height: 40px;
+  overflow-x: hidden;
+
+  span {
+    display: block;  
+    flex-shrink: 0;
+    width: 40px;
+    min-width: 40px;
+    height: 40px;
+    background-size: 40px 40px;
+  }
+
+  .goldStar {
+    background-image: url("/img/star-win.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+
+  .whiteStar {
+    background-image: url("/img/star.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    }
+
 }
 
