--- a/english-for-kids/src/css/_toggle.scss
+++ b/english-for-kids/src/css/_toggle.scss
@@ -77,7 +77,7 @@
     z-index: 1;
 }
 
-#button-10 .knobs:before, #button-10 .knobs:after, #button-10 .knobs span
+.button-10 .knobs:before, .button-10 .knobs:after, .button-10 .knobs span
 {
     position: absolute;
     top: 4px;
@@ -92,21 +92,21 @@
     transition: 0.3s ease all;
 }
 
-#button-10 .knobs:before
+.button-10 .knobs:before
 {
     content: '';
     left: 4px;
     background-color: #03A9F4;
 }
 
-#button-10 .knobs:after
+.button-10 .knobs:after
 {
     content: 'PLAY';
     right: 4px;
     color: #4e4e4e;
 }
 
-#button-10 .knobs span
+.button-10 .knobs span
 {
     display: inline-block;
     left: 4px;
@@ -114,23 +114,23 @@
     z-index: 0;
 }
 
-#button-10 .checkbox:checked + .knobs span
+.button-10 .checkbox:checked + .knobs span
 {
     color: #4e4e4e;
 }
 
-#button-10 .checkbox:checked + .knobs:before
+.button-10 .checkbox:checked + .knobs:before
 {
     left: 66px;
     background-color: #F44336;
 }
 
-#button-10 .checkbox:checked + .knobs:after
+.button-10 .checkbox:checked + .knobs:after
 {
     color: #fff;
 }
 
-#button-10 .checkbox:checked ~ .layer
+.button-10 .checkbox:checked ~ .layer
 {
     background-color: #fcebeb;
 }
