feat: stylized header end search form

--- a/movie-search/src/css/style.scss
+++ b/movie-search/src/css/style.scss
@@ -21,3 +21,29 @@ body {
   width: 600px;
   height: 300px;
 }
+
+.header {
+  display: flex;
+  color: #ffffff;
+  background-color: #262a35;  
+}
+
+.header_medium {  
+  height: 80px;
+}
+
+.header__logo {
+  font-size: 2.5rem;
+}
+
+.header__logo_center {
+  margin: auto;
+}
+
+.search-form_medium {
+  margin: 20px 0 20px 0;
+}
+
+.search-form__input_medium {
+  width: 80%;
+}
