--- a/movie-search/src/css/_custom.scss
+++ b/movie-search/src/css/_custom.scss
@@ -1,21 +1,10 @@
-$grid-breakpoints: (  
-  sm: 0,
-  md: 750px,
-  lg: 1092px,
-) !default;
-
-$container-max-widths: (
-  sm: 300px,
-  md: 650px,
-  lg: 1060px,
-) !default;
-
-@import url(https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap);
+/* @import url(https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap);
+ */
 @import "../../node_modules/bootstrap/scss/functions";
 @import "../../node_modules/bootstrap/scss/variables";
 @import "../../node_modules/bootstrap/scss/mixins";
 
-$font-family-base: 'Roboto', sans-serif !important;
+/* $font-family-base: 'Roboto', sans-serif !important; */
 
 
 
