--- a/movie-search/src/css/style.scss
+++ b/movie-search/src/css/style.scss
@@ -18,8 +18,8 @@ body {
 
 
 .swiper-container {
-  width: 600px;
-  height: 300px;
+  /* width: 600px;
+  height: 300px; */
 }
 
 .header {
@@ -41,9 +41,18 @@ body {
 }
 
 .search-form_medium {
+  display: flex;
+  justify-content: center;
   margin: 20px 0 20px 0;
 }
 
 .search-form__input_medium {
   width: 80%;
+  height: 26px;
+}
+
+.swiper-slide__img {
+  /* transform: scale(0.8); */
+  width: 240px;
+  height: 360px;
 }
