--- a/movie-search/src/css/_keyboard.scss
+++ b/movie-search/src/css/_keyboard.scss
@@ -6,6 +6,7 @@
 }
 
 .keyboard-button {   
+  font-size: 1.2rem;
   user-select: none;
   background-color: rgb(148, 148, 148);
   border: 1px solid rgb(253, 255, 248);
