feat: change key style name on keyboard, delete import 'bootstrap';

--- a/movie-search/src/css/_keyboard.scss
+++ b/movie-search/src/css/_keyboard.scss
@@ -46,300 +46,300 @@
     "ctrl  win    alt  space space space space space space   space  rAlt rCtrl    rCtrl  arrowLeft    arrowDown     arrowRight";
 }
 
-.one {
+.key-one {
   grid-area: one;
   display: block;
 }
-.two {
+.key-two {
   grid-area: two;
   display: block;
 }
-.three {
+.key-three {
   grid-area: three;
   display: block;
 }
 
-.four {
+.key-four {
   grid-area: four;
   display: block;
 }
-.five {
+.key-five {
   grid-area: five;
   display: block;
 }
-.six {
+.key-six {
   grid-area: six;
   display: block;
 }
-.seven {
+.key-seven {
   grid-area: seven;
   display: block;
 }
-.eight {
+.key-eight {
   grid-area: eight;
   display: block;
 }
-.nine {
+.key-nine {
   grid-area: nine;
   display: block;
 }
-.zero {
+.key-zero {
   grid-area: zero;
   display: block;
 }
-.tilda {
+.key-tilda {
   grid-area: tilda;
   display: block;
 }
 
-.minus {
+.key-minus {
   grid-area: minus;
   display: block;
 }
 
-.equal {
+.key-equal {
   grid-area: equal;
   display: block;
 }
 
-.backspace {
+.key-backspace {
   grid-area: backspace;
   display: block;
 }
 
-.tab {
+.key-tab {
   grid-area: tab;
   display: block;
 }
 
-.q {
+.key-q {
   grid-area: q;
   display: block;
 }
 
-.w {
+.key-w {
   grid-area: w;
   display: block;
 }
 
-.e {
+.key-e {
   grid-area: e;
   display: block;
 }
 
-.r {
+.key-r {
   grid-area: r;
   display: block;
 }
 
-.t {
+.key-t {
   grid-area: t;
   display: block;
 }
 
-.y {
+.key-y {
   grid-area: y;
   display: block;
 }
 
-.u {
+.key-u {
   grid-area: u;
   display: block;
 }
 
-.i {
+.key-i {
   grid-area: i;
   display: block;
 }
 
-.o {
+.key-o {
   grid-area: o;
   display: block;
 }
 
-.p {
+.key-p {
   grid-area: p;
   display: block;
 }
 
-.ha {
+.key-ha {
   grid-area: ha;
   display: block;
 }
 
-.strongSign {
+.key-strongSign {
   grid-area: strongSign;
   display: block;
 }
 
-.slash {
+.key-slash {
   grid-area: slash;
   display: block;
 }
 
-.del {
+.key-del {
   grid-area: del;
   display: block;
 }
 
-.caps {
+.key-caps {
   grid-area: caps;
   display: block;
 }
 
-.a {
+.key-a {
   grid-area: a;
   display: block;
 }
 
-.s {
+.key-s {
   grid-area: s;
   display: block;
 }
-.d {
+.key-d {
   grid-area: d;
   display: block;
 }
-.f {
+.key-f {
   grid-area: f;
   display: block;
 }
-.g {
+.key-g {
   grid-area: g;
   display: block;
 }
 
-.h {
+.key-h {
   grid-area: h;
   display: block;
 }
-.j {
+.key-j {
   grid-area: j;
   display: block;
 }
-.k {
+.key-k {
   grid-area: k;
   display: block;
 }
-.l {
+.key-l {
   grid-area: l;
   display: block;
 }
 
-.colon {
+.key-colon {
   grid-area: colon;
   display: block;
 }
 
-.quotationMarks {
+.key-quotationMarks {
   grid-area: quotationMarks;
   display: block;
 }
 
-.enter {
+.key-enter {
   grid-area: enter;
   display: block;
 }
 
-.shift {
+.key-shift {
   grid-area: shift;
   display: block;
 }
 
-.z {
+.key-z {
   grid-area: z;
   display: block;
 }
-.x {
+.key-x {
   grid-area: x;
   display: block;
 }
-.c {
+.key-c {
   grid-area: c;
   display: block;
 }
-.v {
+.key-v {
   grid-area: v;
   display: block;
 }
-.b {
+.key-b {
   grid-area: b;
   display: block;
 }
-.n {
+.key-n {
   grid-area: n;
   display: block;
 }
 
-.m {
+.key-m {
   grid-area: m;
   display: block;
 }
 
-.comma {
+.key-comma {
   grid-area: comma;
   display: block;
 }
-.point {
+.key-point {
   grid-area: point;
   display: block;
 }
-.questionMark {
+.key-questionMark {
   grid-area: questionMark;
   display: block;
 }
 
-.arrowUp {
+.key-arrowUp {
   grid-area: arrowUp;
   display: block;
 }
 
-.rShift {
+.key-rShift {
   grid-area: rShift;
   display: block;
 }
 
-.ctrl {
+.key-ctrl {
   grid-area: ctrl;
   display: block;
 }
 
-.win {
+.key-win {
   grid-area: win;
   display: block;
 }
 
-.alt {
+.key-alt {
   grid-area: alt;
   display: block;
 }
 
-.space {
+.key-space {
   grid-area: space;
   display: block;
 }
 
-.rAlt {
+.key-rAlt {
   grid-area: rAlt;
   display: block;
 }
 
-.rCtrl {
+.key-rCtrl {
   grid-area: rCtrl;
   display: block;
 }
 
-.arrowLeft {
+.key-arrowLeft {
   grid-area: arrowLeft;
   display: block;
 }
 
-.arrowDown {
+.key-arrowDown {
   grid-area: arrowDown;
   display: block;
 }
 
-.arrowRight {
+.key-arrowRight {
   grid-area: arrowRight;
   display: block;
 }
