--- a/movie-search/src/css/style.scss
+++ b/movie-search/src/css/style.scss
@@ -154,7 +154,12 @@
 
   &__title--medium {
     text-decoration: underline;
-    height: 45px;   
+    height: 45px;
+    color: black; 
+
+    &:hover {
+      color: black;
+    }
   }
 
   &__year--medium {
