--- a/fancy-weather/src/components/_custom.scss
+++ b/fancy-weather/src/components/_custom.scss
@@ -12,7 +12,7 @@ $container-max-widths: (
   xl: 1440px
 ) !default;
 
-
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 @import "../../node_modules/bootstrap/scss/functions";
 @import "../../node_modules/bootstrap/scss/variables";
 @import "../../node_modules/bootstrap/scss/mixins";
