feat: add responsive

--- a/fancy-weather/src/components/DataMap/style.scss
+++ b/fancy-weather/src/components/DataMap/style.scss
@@ -51,7 +51,7 @@
     text-align: right;
     text-transform: capitalize;
     color: #ffffff;
-    -webkit-text-stroke: 0.7px black;
+    /* -webkit-text-stroke: 0.7px black; */
     letter-spacing: 1.3px;
 
 }
