--- a/fancy-weather/src/components/SearchForm/style.scss
+++ b/fancy-weather/src/components/SearchForm/style.scss
@@ -1,3 +1,13 @@
 .search-form {
-    width: 375px
+    width: 375px;
+}
+
+.form-control {
+    height: 44px !important;
+
+}
+
+.searchButton {
+    height: 44px;
+    line-height: 0px !important;
 }
