--- a/fancy-weather/src/components/style.scss
+++ b/fancy-weather/src/components/style.scss
@@ -4,8 +4,8 @@
 
 .app {
     background-color: #d1baba;  
-    padding-left: 6%;
-    padding-right: 6%; 
+    /* padding-left: 6%;
+    padding-right: 6%; */ 
 }
 
 .header {
