--- a/fancy-weather/src/components/_custom.scss
+++ b/fancy-weather/src/components/_custom.scss
@@ -1,9 +1,18 @@
- /* $grid-breakpoints: (  
-  sm: 0,
-  md: 750px,
-  lg: 1092px,
-) !default; */
+$grid-breakpoints: (
+  xs: 0,
+  sm: 576px,
+  md: 768px,
+  lg: 930px,
+  xl: 1130px
+) !default;
 
+/* $grid-breakpoints: (
+  xs: 0,
+  sm: 576px,
+  md: 768px,
+  lg: 992px,
+  xl: 1200px
+) !default; */
 
 $container-max-widths: (
   sm: 540px,
